--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.5",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "hoek": "^5.0.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.26"
