--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy:gh": "ng build —prod —base-href='https://ganjuv.github.io/posts-app/' && ngh --dir dist/RnDAngular"
+    "deploy:gh": "ng build --prod --base-href='https://ganjuv.github.io/posts-app/' && ngh --dir dist/RnDAngular"
   },
   "private": true,
   "dependencies": {
